--- a/crane_x7_examples/package.xml
+++ b/crane_x7_examples/package.xml
@@ -4,7 +4,9 @@
   <version>0.0.0</version>
   <description>examples of CRANE-X7 ROS package</description>
   
-  <maintainer email="s19C1052AT@s.chibakoudai.jp">Ros2020-7</maintainer>
+  <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
+  <author email="tiryoh@gmail.com">Daisuke Sato</author>
+  <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
   
   <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
 
