--- a/crane_x7_examples/package.xml
+++ b/crane_x7_examples/package.xml
@@ -7,6 +7,9 @@
   <maintainer email="shop@rt-net.jp">RT Corporation</maintainer>
   <author email="tiryoh@gmail.com">Daisuke Sato</author>
   <author email="nomura@rt-net.jp">Hiroyuki Nomura</author>
+  <author email="s19c1105lw@s.chibakoudai.jp">Masafumi Hoshino</author>
+  <author email="s19c1051vs@s.chibakoudai.jp">Yuya Sakamoto</author>
+  <author email="s19c1033ap@s.chibakoudai.jp">Takumi Kawamoto</author>
   
   <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
 
