--- a/crane_x7_examples/package.xml
+++ b/crane_x7_examples/package.xml
@@ -10,6 +10,7 @@
   <author email="s19c1105lw@s.chibakoudai.jp">Masafumi Hoshino</author>
   <author email="s19c1051vs@s.chibakoudai.jp">Yuya Sakamoto</author>
   <author email="s19c1033ap@s.chibakoudai.jp">Takumi Kawamoto</author>
+  <author email="s19c1080un@s.chibakoudai.jp">Yui Tsubaki</author>
   
   <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
 
