--- a/crane_x7_examples/package.xml
+++ b/crane_x7_examples/package.xml
@@ -11,6 +11,7 @@
   <author email="s19c1051vs@s.chibakoudai.jp">Yuya Sakamoto</author>
   <author email="s19c1033ap@s.chibakoudai.jp">Takumi Kawamoto</author>
   <author email="s19c1080un@s.chibakoudai.jp">Yui Tsubaki</author>
+  <author email="s19c1052at@s.chibakoudai.jp">Ruka Sakurai</author>
   
   <license>NON-COMMERCIAL LICENSE AGREEMENT</license>
 
